@@ -184,12 +184,14 @@ static void php_dom_iterator_move_forward(zend_object_iterator *iter) /* {{{ */
 	bool do_curobj_undef = 1;
 
 	php_dom_iterator *iterator = (php_dom_iterator *)iter;
+	if (Z_ISUNDEF(iterator->curobj)) {
+		return;
+	}
 
+	intern = Z_DOMOBJ_P(&iterator->curobj);
 	object = &iterator->intern.data;
 	nnmap = Z_DOMOBJ_P(object);
 	objmap = (dom_nnodemap_object *)nnmap->ptr;
-
-	intern = Z_DOMOBJ_P(&iterator->curobj);
 
 	if (intern != NULL && intern->ptr != NULL) {
 		if (objmap->nodetype != XML_ENTITY_NODE &&
