@@ -8,6 +8,10 @@ PHP                                                                        NEWS
   . Fixed bug GH-15515 (Configure error grep illegal option q). (Peter Kokot)
   . Fixed bug GH-15514 (Configure error: genif.sh: syntax error). (Peter Kokot)
 
+- DOM:
+  . Fixed bug GH-15551 (Segmentation fault (access null pointer) in
+    ext/dom/xml_common.h). (nielsdos)
+
 - MySQLnd:
   . Fixed bug GH-15432 (Heap corruption when querying a vector). (cmb,
     Kamil Tekiela)
